--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -470,23 +470,104 @@
         <div class="row narrow section-intro with-bottom-sep animate-this">
             <div class="col-twelve">
                 <h3>{% trans 'Download Materials' %}</h3>
-
-                <div class="client-lists">
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                    <div><img src="{% static 'images/catalog/steeringtip_1.jpg' %}"></div>
-                </div>
-
             </div>
         </div>
+
+        <div class="row text-center">
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="shockabsorber/">
+                        <img class="card-img-top" src="{% static 'images/download/absorber_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'SHOCK ABSORBERS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="waterpump/">
+                        <img class="card-img-top" src="{% static 'images/download/water_pump_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'WATER PUMP' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="thermostat/">
+                        <img class="card-img-top" src="{% static 'images/download/thermostat_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'THERMOSTAT' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="generator/">
+                        <img class="card-img-top" src="{% static 'images/download/generator_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'GENERATORS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="brakepad/">
+                        <img class="card-img-top" src="{% static 'images/download/brake_pad_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'BRAKE PADS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="discbrake/">
+                        <img class="card-img-top" src="{% static 'images/download/disc_brake_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'DISK BRAKE' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
     </div>
 
 </section>
