--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -467,6 +467,7 @@
 <section id="download">
 
     <div class="intro-wrap">
+
         <div class="row narrow section-intro with-bottom-sep animate-this">
             <div class="col-twelve">
                 <h3>{% trans 'Download Materials' %}</h3>
@@ -565,9 +566,217 @@
                 </div>
             </div>
 
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="belt/">
+                        <img class="card-img-top" src="{% static 'images/download/belt_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'BELT' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="discbrake/">
+                        <img class="card-img-top" src="{% static 'images/download/provod_500' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'HIGH-VOLTAGE WIRES' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="brakepad/">
+                        <img class="card-img-top" src="{% static 'images/download/gas_stop_500' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'GAS SPRINGS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="discbrake/">
+                        <img class="card-img-top" src="{% static 'images/download/balljoint_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'BALL JOINTS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="brakepad/">
+                        <img class="card-img-top" src="{% static 'images/download/patrubki_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'BRANCH PIPES' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="discbrake/">
+                        <img class="card-img-top" src="{% static 'images/download/controlarm_500' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'CONTROL ARMS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="brakepad/">
+                        <img class="card-img-top" src="{% static 'images/download/500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'STAINLESS STEEL FITTINGS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="discbrake/">
+                        <img class="card-img-top" src="{% static 'images/download/disc_brake_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'SUSPENSION SPRINGS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="brakepad/">
+                        <img class="card-img-top" src="{% static 'images/download/starter_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'STARTERS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="discbrake/">
+                        <img class="card-img-top" src="{% static 'images/download/stoyka_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'STABILIZER STANDS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="brakepad/">
+                        <img class="card-img-top" src="{% static 'images/download/cylinder_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'CLUTCH AND BRAKE CYLINDERS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="discbrake/">
+                        <img class="card-img-top" src="{% static 'images/download/bracket_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'BRACKET' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="brakepad/">
+                        <img class="card-img-top" src="{% static 'images/download/rubberbushing_500' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'RUBBER BUSHINGS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="card">
+                    <a href="discbrake/">
+                        <img class="card-img-top" src="{% static 'images/download/steeringtip_500.jpg' %}"></a>
+                    <div class="card-body center">
+                        <h4 class="card-title">{% trans 'STEERING TIPS' %}</h4>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer center">
+                        <a href="#"
+                           class="btn btn-success">{% trans 'Download' %}</a>
+                    </div>
+                </div>
+            </div>
 
         </div>
-
     </div>
 
 </section>
