--- a/hort_parts/templates/hort_parts/product/download.html
+++ b/hort_parts/templates/hort_parts/product/download.html
@@ -26,14 +26,13 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="shockabsorber/">
-                        <img class="card-img-top" src="{% static 'images/download/absorber_500.jpg' %}"></a>
+                    <img class="card-img-top" src="{% static 'images/download/absorber_500.jpg' %}">
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'SHOCK ABSORBERS' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'static/photos/download/shockabsorber_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
