--- a/hort_parts/templates/hort_parts/product/download.html
+++ b/hort_parts/templates/hort_parts/product/download.html
@@ -40,14 +40,13 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="waterpump/">
-                        <img class="card-img-top" src="{% static 'images/download/water_pump_500.jpg' %}"></a>
+                    <img class="card-img-top" src="{% static 'images/download/water_pump_500.jpg' %}">
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'WATER PUMP' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/waterpump_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -55,14 +54,13 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="thermostat/">
-                        <img class="card-img-top" src="{% static 'images/download/thermostat_500.jpg' %}"></a>
+                    <img class="card-img-top" src="{% static 'images/download/thermostat_500.jpg' %}">
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'THERMOSTAT' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/thermostat_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -70,14 +68,13 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="generator/">
-                        <img class="card-img-top" src="{% static 'images/download/generator_500.jpg' %}"></a>
+                    <img class="card-img-top" src="{% static 'images/download/generator_500.jpg' %}">
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'GENERATORS' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/generator_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -85,14 +82,13 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="brakepad/">
-                        <img class="card-img-top" src="{% static 'images/download/brake_pad_500.jpg' %}"></a>
+                    <img class="card-img-top" src="{% static 'images/download/brake_pad_500.jpg' %}">
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'BRAKE PADS' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/brakepad_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -100,14 +96,13 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="discbrake/">
-                        <img class="card-img-top" src="{% static 'images/download/disc_brake_500.jpg' %}"></a>
+                    <img class="card-img-top" src="{% static 'images/download/disc_brake_500.jpg' %}">
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'DISK BRAKE' %}</h4>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/diskbrake_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
