--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -584,7 +584,7 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
                     <a href="discbrake/">
-                        <img class="card-img-top" src="{% static 'images/download/provod_500' %}"></a>
+                        <img class="card-img-top" src="{% static 'images/download/provod_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'HIGH-VOLTAGE WIRES' %}</h4>
                         <p class="card-text"></p>
@@ -599,7 +599,7 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
                     <a href="brakepad/">
-                        <img class="card-img-top" src="{% static 'images/download/gas_stop_500' %}"></a>
+                        <img class="card-img-top" src="{% static 'images/download/gas_stop_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'GAS SPRINGS' %}</h4>
                         <p class="card-text"></p>
@@ -644,7 +644,7 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
                     <a href="discbrake/">
-                        <img class="card-img-top" src="{% static 'images/download/controlarm_500' %}"></a>
+                        <img class="card-img-top" src="{% static 'images/download/controlarm_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'CONTROL ARMS' %}</h4>
                         <p class="card-text"></p>
@@ -749,7 +749,7 @@
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
                     <a href="brakepad/">
-                        <img class="card-img-top" src="{% static 'images/download/rubberbushing_500' %}"></a>
+                        <img class="card-img-top" src="{% static 'images/download/rubberbushing_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'RUBBER BUSHINGS' %}</h4>
                         <p class="card-text"></p>
