--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -485,7 +485,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/shockabsorber_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -500,7 +500,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/waterpump_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -515,7 +515,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/thermostat_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -530,7 +530,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/generator_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -545,7 +545,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/brakepad_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -560,7 +560,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/diskbrake_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -575,7 +575,7 @@
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer center">
-                        <a href="#"
+                        <a href="{% static 'photos/download/belt_hort.rar' %}"
                            class="btn btn-success">{% trans 'Download' %}</a>
                     </div>
                 </div>
@@ -583,7 +583,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="discbrake/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/provod_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'HIGH-VOLTAGE WIRES' %}</h4>
@@ -598,7 +598,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="brakepad/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/gas_stop_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'GAS SPRINGS' %}</h4>
@@ -613,7 +613,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="discbrake/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/balljoint_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'BALL JOINTS' %}</h4>
@@ -628,7 +628,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="brakepad/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/patrubki_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'BRANCH PIPES' %}</h4>
@@ -643,7 +643,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="discbrake/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/controlarm_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'CONTROL ARMS' %}</h4>
@@ -658,7 +658,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="brakepad/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/nerzav_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'STAINLESS STEEL FITTINGS' %}</h4>
@@ -673,7 +673,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="discbrake/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/pruguna_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'SUSPENSION SPRINGS' %}</h4>
@@ -688,7 +688,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="brakepad/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/starter_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'STARTERS' %}</h4>
@@ -703,7 +703,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="discbrake/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/stoyka_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'STABILIZER STANDS' %}</h4>
@@ -718,7 +718,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="brakepad/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/cylinder_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'CLUTCH AND BRAKE CYLINDERS' %}</h4>
@@ -733,7 +733,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="discbrake/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/bracket_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'BRACKET' %}</h4>
@@ -748,7 +748,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="brakepad/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/rubberbushing_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'RUBBER BUSHINGS' %}</h4>
@@ -763,7 +763,7 @@
 
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="card">
-                    <a href="discbrake/">
+                    <a href="/">
                         <img class="card-img-top" src="{% static 'images/download/steeringtip_500.jpg' %}"></a>
                     <div class="card-body center">
                         <h4 class="card-title">{% trans 'STEERING TIPS' %}</h4>
